feat: added basic implementation

--- a/configs/.env
+++ b/configs/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URI="mongodb://localhost:27017/sloovi"
+MONGO_DATABASE_URI="mongodb://localhost:27017/service_apartment"
 ENV="TEST"
 JWT_ALGORITHM="HS256"
 JWT_SECRET_KEY="iamkey"
