--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ bcrypt==3.2.2
 cffi==1.15.1
 click==8.1.3
 cryptography==37.0.4
+dnspython==2.2.1
 Flask==2.2.1
+flask-http-middleware==0.2.1
 Flask-RESTful==0.3.9
 gunicorn==20.1.0
 importlib-metadata==4.12.0
@@ -24,4 +26,3 @@ pytz==2022.1
 six==1.16.0
 Werkzeug==2.2.1
 zipp==3.8.1
-dnspython==2.2.1
